--- a/site/theme/static/template.html
+++ b/site/theme/static/template.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://wxa.wxs.qq.com/mpweb/delivery/legacy/wxadtouch/upload/t1/rytl8d2o_8f354f8f.png" type="image/x-icon">
-    <meta
-      name="description"
-      content="AD UI is a UI full of ads"
-    />
-    <title>{% if title %}{title | safe}{% else %}AD UI{% endif %}</title>
-    {% for cssFile in manifest["css"] %}
-    <link rel="stylesheet" type="text/css" href="{{ root }}{{ cssFile }}" />
-    {% endfor %}
-  </head>
-  <body>
-    <div id="react-content">
-      {{ content | safe }}
-    </div>
-    {% for jsFile in manifest["js"] %}<script src="{{ root }}{{ jsFile }}"></script>
-    {% endfor %}
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="https://wxa.wxs.qq.com/mpweb/delivery/legacy/wxadtouch/upload/t1/rytl8d2o_8f354f8f.png"
+    type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="//wxa.wxs.qq.com/wxad-design/yijie/adui-tailwind-build.css">
+
+  <meta name="description" content="AD UI is a UI full of ads" />
+  <title>{% if title %}{title | safe}{% else %}AD UI{% endif %}</title>
+  {% for cssFile in manifest["css"] %}
+  <link rel="stylesheet" type="text/css" href="{{ root }}{{ cssFile }}" />
+  {% endfor %}
+</head>
+
+<body>
+  <div id="react-content">
+    {{ content | safe }}
+  </div>
+  {% for jsFile in manifest["js"] %}
+  <script src="{{ root }}{{ jsFile }}"></script>
+  {% endfor %}
+</body>
+
 </html>
